frogtober_2023_Website: Fix share button spacing, responsive view of checker page

--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -35,3 +35,8 @@
 		}
 	}
 }
+
+
+.btn-facebook, .btn-twitter{
+	color:getColor('white.base');
+}
